--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -297,6 +297,9 @@ html, body {
   padding-bottom: 70px;
   margin-top: 0px;
   margin-bottom: 0px; }
+  .pagination form {
+    width: auto;
+    direction: rtl; }
   .pagination .btnNumPag {
     background-color: transparent;
     outline: none;
