--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -390,6 +390,15 @@ html, body {
   }
 }
 
+
+.link-prensa {
+  padding-top: 16px;
+  color: #818181;
+  font-size: 14px;
+  p {
+    margin-top: -4px;
+  }
+}
 /* NAVBAR TOGGLE & SLIDE-MENU */
 .mobile-toggle {
   display: inline-block;
