--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -4928,6 +4928,8 @@ nav#layout-mainmenu.navbar-mode-inline ul.mainmenu-nav li:first-child {
 .control-treeview ol > li.dragged div, .control-treeview ol > li > div:hover {
   background-color: #818181 !important;
   border-bottom: 1px solid #818181 !important; }
+  .control-treeview ol > li.dragged div .link-prensa, .control-treeview ol > li > div:hover .link-prensa {
+    color: #ffffff; }
 
 .control-treeview.treeview-light ol > li > div > ul.submenu li {
   background-color: #175DA3;
