--- a/themes/default/layouts/reportaje.htm
+++ b/themes/default/layouts/reportaje.htm
@@ -97,7 +97,7 @@ code = "redes-sociales"
         {% partial "reports" %}
         </div>
     </div>
-
+    {% if numPag > 0 %}
     <div class="pagination">
       {% for i in 1..numPag %}
           <form data-request="onPaginate">
@@ -107,7 +107,7 @@ code = "redes-sociales"
           </form>
       {% endfor %}
     </div>
-
+    {% endif %}
 
     {% partial 'site/footer' %}
 
@@ -116,7 +116,7 @@ code = "redes-sociales"
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/js/select2.full.min.js"></script>
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/script-select2.js"></script>
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/iziModal/js/iziModal.js"></script>
-
+    <script src="{{ 'assets/js/app.js'|theme }}"></script>
     <script type="text/javascript" src="{{url('/')}}/plugins/rainlab/pages/assets/js/style.js"></script>
 
     {% framework %}
