--- a/themes/default/layouts/publicacion.htm
+++ b/themes/default/layouts/publicacion.htm
@@ -98,6 +98,7 @@ code = "redes-sociales"
         </div>
     </div>
 
+    {% if numPag > 0 %}
     <!-- Pagination -->
     <div class="pagination">
       {% for i in 1..numPag %}
@@ -108,7 +109,7 @@ code = "redes-sociales"
           </form>
       {% endfor %}
     </div>
-
+    {% endif %}
 
     {% partial 'site/footer' %}
 
