--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -394,6 +394,7 @@ html, body {
 .link-prensa {
   padding-top: 16px;
   color: #818181;
+  font-weight: 600;
   font-size: 14px;
   p {
     margin-top: -4px;
