--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -315,6 +315,7 @@ html, body {
 .link-prensa {
   padding-top: 16px;
   color: #818181;
+  font-weight: 600;
   font-size: 14px; }
   .link-prensa p {
     margin-top: -4px; }
