--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -1932,6 +1932,7 @@ html, body {
   background-color: white; }
 
 .mock-space-prensa {
+  width: 100%;
   height: 200px;
   background-color: white;
   display: -webkit-box;
