--- a/themes/default/partials/publications.htm
+++ b/themes/default/partials/publications.htm
@@ -13,7 +13,7 @@
 ?>
 
 ==
-{% if news|length > 0 %}
+{% if publications|length > 0 %}
 <div class="publis">
 {% for publication in publications %}
 
