--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -373,6 +373,10 @@ html, body {
   margin-bottom: 0px;
   form {
     width: auto;
+    margin-left: 10px;
+    &:last-child {
+      margin-left: 10px;
+    }
   }
   .btnNumPag {
     background-color: transparent;
