--- a/themes/default/layouts/default.htm
+++ b/themes/default/layouts/default.htm
@@ -83,6 +83,7 @@ function onStart()
     {% elseif urlply|length > 1 %}
     <script>
         var address = "{{this.page.address}}";
+        console.log(address);
     </script>
     <div id="map" style="height: 500px">
         <br>
