--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -36,6 +36,7 @@
     top: 4px;
     object-fit: cover;
     z-index: -1;
+    left: 0px;
   }
   .header-txt {
     color: white;
@@ -170,6 +171,7 @@
     height: 100%;
     position: fixed;
     top: 4px;
+    left: 0px;
     object-fit: cover;
     z-index: -1;
   }
