--- a/plugins/rainlab/pages/assets/css/style-village.css
+++ b/plugins/rainlab/pages/assets/css/style-village.css
@@ -13,7 +13,8 @@
   position: fixed;
   top: 4px;
   object-fit: cover;
-  z-index: 1; }
+  z-index: 1;
+  left: 0px; }
 
 .header-alcornocales #natu-via {
   font-size: 200px;
