--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -1017,6 +1017,7 @@ html, body {
     width: 100%;
     height: 100%;
     position: fixed;
+    left: 0px;
     top: 4px;
     object-fit: cover;
     z-index: -1; }
@@ -1168,7 +1169,8 @@ html, body {
     position: fixed;
     top: 4px;
     object-fit: cover;
-    z-index: -1; }
+    z-index: -1;
+    left: 0px; }
   .ayuda-header .header-container {
     z-index: 90; }
   .ayuda-header .header-txt-comollegar {
