--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -1067,6 +1067,7 @@ html, body {
       width: 100%;
       height: 100%;
       position: fixed;
+      left: 0px;
       top: 4px;
       object-fit: cover;
       z-index: -1;
@@ -1230,6 +1231,7 @@ html, body {
       top: 4px;
       object-fit: cover;
       z-index: -1;
+      left: 0px;
   }
   .header-container {
     z-index: 90;
