--- a/plugins/rainlab/pages/assets/scss/style-comarcas.scss
+++ b/plugins/rainlab/pages/assets/scss/style-comarcas.scss
@@ -139,7 +139,7 @@
     max-width: 1145px;
   }
   .title {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 64px;
     color: #4A4A4A;
     line-height: 65px;
@@ -216,7 +216,7 @@
     max-width: 714px;
   padding-top: 190px;}
     .main-section-comarcas .main-txt .title {
-      font-family: 'AvenirNext-DemiBold';
+      font-family: 'AvenirNext-DemiBold', sans-serif;
       font-size: 64px;
       color: #4A4A4A;
       line-height: 65px;
@@ -276,7 +276,7 @@
         .main-section-comarcas .main-events-container .event .txt-container .name {
           font-size: 39px;
           color: white;
-          font-family: 'AvenirNext-DemiBold';
+          font-family: 'AvenirNext-DemiBold', sans-serif;
           line-height: 48px;
           max-width: 321px;
           text-transform: uppercase; }
@@ -407,7 +407,7 @@
       .name {
         font-size: 39px;
         color: white;
-        font-family: 'AvenirNext-DemiBold';
+        font-family: 'AvenirNext-DemiBold', sans-serif;
         line-height: 48px;
         max-width: 321px;
         text-transform: uppercase;
@@ -468,7 +468,7 @@
       .name {
         font-size: 39px;
         color: white;
-        font-family: 'AvenirNext-DemiBold';
+        font-family: 'AvenirNext-DemiBold', sans-serif;
         line-height: 48px;
         max-width: 321px;
         text-transform: uppercase;
@@ -511,7 +511,7 @@
     align-items: center;
     flex-direction: column;
     .title {
-      font-family: 'AvenirNext-DemiBold';
+      font-family: 'AvenirNext-DemiBold', sans-serif;
       font-size: 64px;
       color: #4A4A4A;
       line-height: 65px;
@@ -582,7 +582,7 @@
         .name {
           font-size: 39px;
           color: white;
-          font-family: 'AvenirNext-DemiBold';
+          font-family: 'AvenirNext-DemiBold', sans-serif;
           line-height: 48px;
           max-width: 355px;
           text-transform: uppercase;
@@ -668,7 +668,7 @@
   margin-top: 100px;
   margin-bottom: 100px;
   .also-title {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     color: #4A4A4A;
     font-size: 32px;
   }
