--- a/plugins/rainlab/pages/assets/scss/style-totalEvents.scss
+++ b/plugins/rainlab/pages/assets/scss/style-totalEvents.scss
@@ -208,7 +208,7 @@ form, .inputs-container {
     top: 0;
     left: 55px; }
     .more-popular .title-container .title {
-      font-family: 'AvenirNext-DemiBold';
+      font-family: 'AvenirNext-DemiBold', sans-serif;
       font-size: 64px;
       color: #4A4A4A;
       line-height: 65px;
@@ -263,7 +263,7 @@ form, .inputs-container {
         .more-popular .main-events-container .event .txt-container .name {
           font-size: 39px;
           color: white;
-          font-family: 'AvenirNext-DemiBold';
+          font-family: 'AvenirNext-DemiBold', sans-serif;
           line-height: 48px;
           max-width: 355px;
           text-transform: uppercase; }
@@ -335,7 +335,7 @@ form, .inputs-container {
     align-items: center;
     flex-direction: column; }
     .all-events .title-container .title {
-      font-family: 'AvenirNext-DemiBold';
+      font-family: 'AvenirNext-DemiBold', sans-serif;
       font-size: 64px;
       color: #4A4A4A;
       line-height: 65px;
@@ -404,7 +404,7 @@ form, .inputs-container {
         .all-events .all-events-container .event .txt-container .name {
           font-size: 39px;
           color: white;
-          font-family: 'AvenirNext-DemiBold';
+          font-family: 'AvenirNext-DemiBold', sans-serif;
           line-height: 48px;
           max-width: 355px;
           text-transform: uppercase; }
