--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -101,7 +101,7 @@
 }
 
 .section-txt h3, .section-txt-village h3, .section-txt-comarca h3 {
-  font-family: 'AvenirNext-DemiBold';
+  font-family: 'AvenirNext-DemiBold', sans-serif;
   font-size: 64px;
   color: #4A4A4A;
   line-height: 65px;
@@ -1102,7 +1102,7 @@ html, body {
     }
   }
   .tagline {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 15px;
     color: white;
     position: absolute;
@@ -1186,7 +1186,7 @@ html, body {
     }
   }
   .tagline {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 15px;
     color: white;
     position: absolute;
@@ -1263,7 +1263,7 @@ html, body {
     }
   }
   .tagline {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 15px;
     color: white;
     position: absolute;
@@ -1347,7 +1347,7 @@ html, body {
     }
   }
   .tagline {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 15px;
     color: white;
     position: absolute;
@@ -1434,7 +1434,7 @@ html, body {
         }
         p {
           color: white;
-          font-family: 'AvenirNext-DemiBold';
+          font-family: 'AvenirNext-DemiBold', sans-serif;
           font-size: 39px;
           text-transform: uppercase;
         }
@@ -1452,7 +1452,7 @@ html, body {
         }
         p {
           color: white;
-          font-family: 'AvenirNext-DemiBold';
+          font-family: 'AvenirNext-DemiBold', sans-serif;
           font-size: 39px;
           text-transform: uppercase;
         }
@@ -1614,7 +1614,7 @@ html, body {
     padding: 130px 0px 0px 0px;
   }
   h3 {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 64px;
     color: #4A4A4A;
   }
@@ -1697,7 +1697,7 @@ html, body {
         }
         p {
           color: white;
-          font-family: 'AvenirNext-DemiBold';
+          font-family: 'AvenirNext-DemiBold', sans-serif;
           font-size: 39px;
           text-transform: uppercase;
           max-width: 292px;
@@ -1707,7 +1707,7 @@ html, body {
       }
       a {
         color: #F5A623;
-        font-family: 'AvenirNext-DemiBold';
+        font-family: 'AvenirNext-DemiBold', sans-serif;
         font-size: 15px;
         z-index: 80;
         img {
@@ -1742,7 +1742,7 @@ html, body {
     padding: 130px 0px 0px 0px;
   }
   h3 {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 64px;
     color: #4A4A4A;
   }
@@ -1761,7 +1761,7 @@ html, body {
     padding: 130px 0px 0px 0px;
   }
   h3 {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 64px;
     color: #4A4A4A;
   }
@@ -2032,7 +2032,7 @@ html, body {
     margin: 0px auto;
     padding: 130px 0px 130px 0px;
   h3 {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 64px;
     color: #4A4A4A;
   }
