--- a/plugins/rainlab/pages/assets/css/style-totalEvents.css
+++ b/plugins/rainlab/pages/assets/css/style-totalEvents.css
@@ -221,7 +221,7 @@ form input[type="submit"]:hover, form input[type="submit"]:focus, form input[typ
   left: 55px; }
 
 .more-popular .title-container .title {
-  font-family: 'AvenirNext-DemiBold';
+  font-family: 'AvenirNext-DemiBold', sans-serif;
   font-size: 64px;
   color: #4A4A4A;
   line-height: 65px;
@@ -287,7 +287,7 @@ form input[type="submit"]:hover, form input[type="submit"]:focus, form input[typ
 .more-popular .main-events-container .event .txt-container .name {
   font-size: 39px;
   color: white;
-  font-family: 'AvenirNext-DemiBold';
+  font-family: 'AvenirNext-DemiBold', sans-serif;
   line-height: 48px;
   max-width: 355px;
   text-transform: uppercase; }
@@ -368,7 +368,7 @@ form input[type="submit"]:hover, form input[type="submit"]:focus, form input[typ
   flex-direction: column; }
 
 .all-events .title-container .title {
-  font-family: 'AvenirNext-DemiBold';
+  font-family: 'AvenirNext-DemiBold', sans-serif;
   font-size: 64px;
   color: #4A4A4A;
   line-height: 65px;
@@ -448,7 +448,7 @@ form input[type="submit"]:hover, form input[type="submit"]:focus, form input[typ
 .all-events .all-events-container .event .txt-container .name {
   font-size: 39px;
   color: white;
-  font-family: 'AvenirNext-DemiBold';
+  font-family: 'AvenirNext-DemiBold', sans-serif;
   line-height: 48px;
   max-width: 355px;
   text-transform: uppercase; }
