--- a/plugins/rainlab/pages/assets/css/style-village.css
+++ b/plugins/rainlab/pages/assets/css/style-village.css
@@ -157,7 +157,7 @@
     .img-village .txt-container .title {
       color: white;
       font-size: 94px;
-      font-family: 'AvenirNext-DemiBold';
+      font-family: 'AvenirNext-DemiBold', sans-serif;
       line-height: 90px;
       text-transform: uppercase;
       margin-bottom: 20px; }
@@ -221,7 +221,7 @@
     .featured-element .txt-container .title {
       color: white;
       font-size: 94px;
-      font-family: 'AvenirNext-DemiBold';
+      font-family: 'AvenirNext-DemiBold', sans-serif;
       line-height: 90px;
       text-transform: uppercase;
       margin-bottom: 20px; }
@@ -299,7 +299,7 @@
     margin: 0 auto;
     max-width: 1145px; }
   .section-txt-village .title {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 64px;
     color: #4A4A4A;
     line-height: 65px;
@@ -355,7 +355,7 @@
   justify-content: center;
   margin-top: 180px; }
   .more-content .also-title {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     color: #4A4A4A;
     font-size: 32px; }
   .more-content .also-content {
@@ -468,7 +468,7 @@
         .all-exps .all-events-container .event .txt-container .name {
           font-size: 39px;
           color: white;
-          font-family: 'AvenirNext-DemiBold';
+          font-family: 'AvenirNext-DemiBold', sans-serif;
           line-height: 48px;
           max-width: 256px;
           text-transform: uppercase; }
@@ -537,7 +537,7 @@
               font-size: 16px;
               line-height: 22px;
               margin-left: 11px;
-              font-family: 'AvenirNext-DemiBold';
+              font-family: 'AvenirNext-DemiBold', sans-serif;
               text-transform: capitalize; }
             .all-exps .all-events-container .event .txt-container .icons .icon-pair img {
               width: 23px;
