--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -68,7 +68,7 @@ input:-webkit-autofill {
   width: 58%; }
 
 .section-txt h3, .section-txt-village h3, .section-txt-comarca h3 {
-  font-family: 'AvenirNext-DemiBold';
+  font-family: 'AvenirNext-DemiBold', sans-serif;
   font-size: 64px;
   color: #4A4A4A;
   line-height: 65px;
@@ -1047,7 +1047,7 @@ html, body {
       position: absolute;
       z-index: 1; }
   .static-header .tagline {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 15px;
     color: white;
     position: absolute;
@@ -1125,7 +1125,7 @@ html, body {
       position: absolute;
       z-index: 1; }
   .about-header .tagline {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 15px;
     color: white;
     position: absolute;
@@ -1197,7 +1197,7 @@ html, body {
       position: absolute;
       z-index: 1; }
   .ayuda-header .tagline {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 15px;
     color: white;
     position: absolute;
@@ -1275,7 +1275,7 @@ html, body {
       position: absolute;
       z-index: 1; }
   .somos-section .tagline {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 15px;
     color: white;
     position: absolute;
@@ -1370,7 +1370,7 @@ html, body {
           margin-bottom: 28px; }
         .ways .way .pic-way .icon-container p {
           color: white;
-          font-family: 'AvenirNext-DemiBold';
+          font-family: 'AvenirNext-DemiBold', sans-serif;
           font-size: 39px;
           text-transform: uppercase; }
       .ways .way .pic-way .icon-press-container {
@@ -1389,7 +1389,7 @@ html, body {
           margin-bottom: 28px; }
         .ways .way .pic-way .icon-press-container p {
           color: white;
-          font-family: 'AvenirNext-DemiBold';
+          font-family: 'AvenirNext-DemiBold', sans-serif;
           font-size: 39px;
           text-transform: uppercase; }
     .ways .way .info-way {
@@ -1527,7 +1527,7 @@ html, body {
     margin: 0px auto;
     padding: 130px 0px 0px 0px; }
   .contact h3 {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 64px;
     color: #4A4A4A; }
   .contact .separator {
@@ -1626,7 +1626,7 @@ html, body {
           margin-bottom: 13px; }
         .contact-ways .way .pic-way .icon-container p {
           color: white;
-          font-family: 'AvenirNext-DemiBold';
+          font-family: 'AvenirNext-DemiBold', sans-serif;
           font-size: 39px;
           text-transform: uppercase;
           max-width: 292px;
@@ -1634,7 +1634,7 @@ html, body {
           line-height: 48px; }
       .contact-ways .way .pic-way a {
         color: #F5A623;
-        font-family: 'AvenirNext-DemiBold';
+        font-family: 'AvenirNext-DemiBold', sans-serif;
         font-size: 15px;
         z-index: 80; }
         .contact-ways .way .pic-way a img {
@@ -1662,7 +1662,7 @@ html, body {
     margin: 0px auto;
     padding: 130px 0px 0px 0px; }
   .publicaciones h3 {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 64px;
     color: #4A4A4A; }
   .publicaciones .separator {
@@ -1678,7 +1678,7 @@ html, body {
     margin: 0px auto;
     padding: 130px 0px 0px 0px; }
   .reportajes h3 {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 64px;
     color: #4A4A4A; }
   .reportajes .separator {
@@ -1917,7 +1917,7 @@ html, body {
   margin: 0px auto;
   padding: 130px 0px 130px 0px; }
   .somos-txt-container h3 {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     font-size: 64px;
     color: #4A4A4A; }
   .somos-txt-container .separator {
