--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -385,7 +385,7 @@
     }
     .title {
       color: #4A4A4A;
-      font-family: 'AvenirNext-DemiBold';
+      font-family: 'AvenirNext-DemiBold', sans-serif;
       font-size: 64px;
       line-height: 65px;
       text-align: left;
@@ -472,7 +472,7 @@
   position: relative;
   z-index: 100;
   .also-title {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     color: #4A4A4A;
     font-size: 32px;
   }
@@ -537,7 +537,7 @@
   background-color: white;
   z-index: 100;
   .also-title {
-    font-family: 'AvenirNext-DemiBold';
+    font-family: 'AvenirNext-DemiBold', sans-serif;
     color: #4A4A4A;
     font-size: 32px;
   }
@@ -645,7 +645,7 @@
     }
     h3 {
       text-align: center;
-      font-family: 'AvenirNext-DemiBold';
+      font-family: 'AvenirNext-DemiBold', sans-serif;
       color: #4A4A4A;
       font-size: 30px;
       line-height: 35px;
@@ -681,7 +681,7 @@
       }
       input[type="submit"] {
         background-color: #F5A623;
-        font-family: 'AvenirNext-DemiBold';
+        font-family: 'AvenirNext-DemiBold', sans-serif;
         color: white;
         font-size: 16px;
         box-shadow: none;
@@ -724,7 +724,7 @@
     }
     h3 {
       text-align: center;
-      font-family: 'AvenirNext-DemiBold';
+      font-family: 'AvenirNext-DemiBold', sans-serif;
       color: #4A4A4A;
       font-size: 30px;
       line-height: 35px;
@@ -761,7 +761,7 @@
       }
       input[type="submit"] {
         background-color: #F5A623;
-        font-family: 'AvenirNext-DemiBold';
+        font-family: 'AvenirNext-DemiBold', sans-serif;
         color: white;
         font-size: 16px;
         box-shadow: none;
