--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -337,7 +337,10 @@ html, body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  padding: 10px 0px; }
+  padding: 10px 0px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%); }
 
 .bars {
   display: block;
