--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -419,6 +419,9 @@ html, body {
   -ms-user-select: none;
   user-select: none;
   padding: 10px 0px;
+  left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
  }
 
  .bars {
