--- a/themes/default/layouts/default.htm
+++ b/themes/default/layouts/default.htm
@@ -25,7 +25,8 @@ code = "redes-sociales"
 [staticApp]
 ==
 <?php
-function onStart()
+    
+    function onStart()
     {
         $this['lang']=\App::getLocale();
         if($this['lang']==''){
@@ -34,7 +35,7 @@ function onStart()
         
         $this['urlPage'] = $this->page->url;
 
-        if($this->page->apiBag)
+        if($this->page->apiBag){
             if(isset($this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"])){
                 $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
             }
@@ -46,6 +47,8 @@ function onStart()
             $playa = $this->staticApp->beachFindByUrl($this['urlPage']);
             $this['addrplaya'] = $playa->address;
         }
+    }
+    
 ?>
 ==
 <!DOCTYPE html>
