--- a/themes/default/layouts/default.htm
+++ b/themes/default/layouts/default.htm
@@ -45,10 +45,10 @@ code = "redes-sociales"
 
         if (count( $is_playa )>1){
             $playa = $this->staticApp->beachFindByUrl($this['urlPage']);
-            $this['addrplaya'] = $playa->address;
+            $this['addrplaya'] = $playa[0]->address;
         }
     }
-    
+
 ?>
 ==
 <!DOCTYPE html>
