--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -1417,6 +1417,7 @@ html, body {
         position: absolute;
         width: 100%;
         height: 100%;
+        left: 0;
         object-fit: cover;
       }
       &:before {
@@ -1681,6 +1682,7 @@ html, body {
         width: 100%;
         height: 100%;
         object-fit: cover;
+        left: 0px;
       }
       &:before {
         content: '';
