--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -307,6 +307,7 @@
   height: 100%;
   position: absolute;
   bottom: 0px;
+  left: 0px;
   width: 100%;
   background-image: url("../svg/oval-black.svg");
   background-repeat: no-repeat;
