--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -1159,6 +1159,7 @@ html, body {
       height: 100%;
       position: absolute;
       top: 4px;
+      left: 0px;
       object-fit: cover;
       z-index: -1;
   }
@@ -1320,6 +1321,7 @@ html, body {
       height: 100%;
       position: absolute;
       top: 0;
+      left: 0px;
       object-fit: cover;
       z-index: -1;
   }
