--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -1068,6 +1068,7 @@ html, body {
     height: 100%;
     background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.68) 100%);
     z-index: 5;
+    left: 0px;
   }
   .img-header {
       width: 100%;
@@ -1153,6 +1154,7 @@ html, body {
     height: 100%;
     background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.68) 100%);
     z-index: 5;
+    left: 0px;
   }
   .img-header {
       width: 100%;
@@ -1315,6 +1317,7 @@ html, body {
     height: 100%;
     background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.68) 100%);
     z-index: 5;
+    left: 0px;
   }
   .img-header {
       width: 100%;
