--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -1017,7 +1017,8 @@ html, body {
     width: 100%;
     height: 100%;
     background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.68) 100%);
-    z-index: 5; }
+    z-index: 5;
+    left: 0px; }
   .static-header .img-header {
     width: 100%;
     height: 100%;
@@ -1096,7 +1097,8 @@ html, body {
     width: 100%;
     height: 100%;
     background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.68) 100%);
-    z-index: 5; }
+    z-index: 5;
+    left: 0px; }
   .about-header .img-header {
     width: 100%;
     height: 100%;
@@ -1247,7 +1249,8 @@ html, body {
     width: 100%;
     height: 100%;
     background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.68) 100%);
-    z-index: 5; }
+    z-index: 5;
+    left: 0px; }
   .somos-section .img-header {
     width: 100%;
     height: 100%;
