--- a/themes/default/partials/pagination.htm
+++ b/themes/default/partials/pagination.htm
@@ -18,7 +18,7 @@
             <form data-request="onPaginate">
                 <input type="hidden" name = "ipag" value="{{i}}">
                 <input type="hidden" name = "inumberReg" value="{{numberReg}}">                
-                <input type="text" name = "iidm" value="{{iidm}}">
+                <input type="text" name = "iidm" value="{{idm}}">
                 {% if i == startPag %}
           			<button id="numPag{{i}}" class="btnNumPag active" type="submit">{{i}}</button>
           			{% else %}
