--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -1250,7 +1250,8 @@ html, body {
     height: 100%;
     background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.68) 100%);
     z-index: 5;
-    left: 0px; }
+    left: 0px;
+    top: 0px; }
   .somos-section .img-header {
     width: 100%;
     height: 100%;
