--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -1222,6 +1222,8 @@ html, body {
       z-index: 10;
       text-align: center;
       margin: 0px;
+      transform: translate(-50%,0);
+      position: absolute;
   }
 }
 .ayuda-header {
@@ -1299,6 +1301,8 @@ html, body {
       z-index: 10;
       text-align: center;
       margin: 0px;
+      transform: translate(-50%,0);
+      position: absolute;
   }
 }
 .somos-section {
