--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -1158,7 +1158,7 @@ html, body {
     text-align: center;
     margin: 0px;
     transform: translate(-50%, 0);
-    position: absolute; }
+    left: 50%; }
 
 .ayuda-header {
   width: 100%;
@@ -1231,8 +1231,8 @@ html, body {
     z-index: 10;
     text-align: center;
     margin: 0px;
-    transform: translate(-50%, 0);
-    position: absolute; }
+    left: 50%;
+    transform: translate(-50%, 0); }
 
 .somos-section {
   width: 100%;
@@ -1313,7 +1313,9 @@ html, body {
     line-height: 26px;
     z-index: 10;
     text-align: center;
-    margin: 0px; }
+    margin: 0px;
+    left: 50%;
+    transform: translate(-50%, 0); }
 
 .ways {
   width: 100%;
