--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -1223,7 +1223,7 @@ html, body {
       text-align: center;
       margin: 0px;
       transform: translate(-50%,0);
-      position: absolute;
+      left: 50%;
   }
 }
 .ayuda-header {
@@ -1301,8 +1301,8 @@ html, body {
       z-index: 10;
       text-align: center;
       margin: 0px;
+      left: 50%;
       transform: translate(-50%,0);
-      position: absolute;
   }
 }
 .somos-section {
@@ -1390,6 +1390,8 @@ html, body {
       z-index: 10;
       text-align: center;
       margin: 0px;
+      left: 50%;
+      transform: translate(-50%,0);
   }
 }
 .ways {
