--- a/plugins/rainlab/pages/assets/css/style-comarcas.css
+++ b/plugins/rainlab/pages/assets/css/style-comarcas.css
@@ -159,7 +159,8 @@
 .section-img-comarca {
   width: 100%;
   z-index: 50;
-  position: relative; }
+  position: relative;
+  background-color: white; }
   .section-img-comarca img {
     width: 100%;
     height: auto;
