--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -795,6 +795,7 @@
   height: auto;
   position: relative;
   z-index: 100;
+  background-color: white;
   img {
     width: 100%;
     height: auto;
